<resources>
    <string name="app_name">FirstApp</string>
    <string name="title_activity_screen2">Screen2</string>
    <string name="linear">Linear layout</string>
    <string name="frame">Frame Layout</string>
    <string name="constraint">Constraint Layout</string>
    <string name="relative">Relative Layout</string>
    <string name="gui">GUI Demo 16L-4257</string>
    <string name="Follow">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbb">tabbb</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Blink">" Blink:Better Affiliates lInk"</string>
    <string name="Squib">"Squibner LLC"</string>
    <string name="Back">"Back"</string>
    <string name="Exit">"Exit"</string>
    <string name="chatify">"chatify"</string>
    <string name="Female">"Female"</string>
    <string name="already">"Already have an account?"</string>
    <string name="Login">"Login now"</string>
    <string name="Male">"  Male"</string>
    <string name="RetypePassword">"Retype Password"</string>>
    <string name="Pass">"Password"</string>
    <string name="Lastname">"Last Name"</string>
    <string name="Firstname">"First Name"</string>
    <string name="Signup">"Sign Up"</string>
    <string name="Email">"Email"</string>
    <string name="eifel">"Eifel Tower"</string>
    <string name="date">"21/Aug/2017"</string>
    <string name="name">"Fatima Naseer"</string>
    <string name="btn1">"Button 1"</string>
    <string name="btn2">"Button 2"</string>
    <string name="btn3">"Button 3"</string>
    <string name="Edit">"Edit Profile"</string>
    <string name="bio">" BS CS Student"</string>
    <string name="life">" Life is great so are you!"</string>
    <string name="posts">"Posts"</string>
    <string name="followers">"Followers"</string>
    <string name="following">"Following"</string>
    <string name="text">6</string>
    <string name="text2">121</string>
    <string name="text3">211</string>
    <string name="Update">Update</string>
    <string name="dots">...</string>
    <string name="rating">4.0</string>
</resources>
