<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="65dp"

                android:text="@string/Edit" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="84dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/butterfly"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="110dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="73dp"
                android:layout_height="23dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="40dp"
                android:text="@string/following" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="40dp"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="42dp"
                android:layout_height="21dp"
                android:layout_marginStart="135dp"
                android:layout_marginTop="40dp"
                android:text="@string/posts" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="15dp"
                android:layout_height="30dp"
                android:layout_marginStart="145dp"
                android:layout_marginTop="20dp"
                android:text="@string/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="20dp"
                android:text="@string/text2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:layout_marginTop="20dp"
                android:text="@string/text3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp"
                android:text="@string/bio"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="160dp"
                android:text="@string/life"
                android:textSize="15sp"
                android:textStyle="italic" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/centre_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="210dp"
                android:background="?android:attr/windowBackground"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:menu="@menu/center_nav" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="270dp"
                android:adjustViewBounds="true"
                android:horizontalSpacing="50dp"
                android:verticalSpacing="50dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="2"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="2"
                    android:layout_column="2"
                    app:srcCompat="@drawable/blink" />


                <ImageView

                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    app:srcCompat="@drawable/blink" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView20"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="3"
                    android:layout_column="0"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView21"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="3"
                    android:layout_column="1"
                    app:srcCompat="@drawable/blink" />

                <ImageView

                    android:id="@+id/imageView22"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="3"
                    android:layout_column="2"
                    app:srcCompat="@drawable/blink" />

            </GridLayout>

            <TextView
                android:id="@+id/hey"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="600dp"
                android:layout_marginBottom="10dp"
                android:width="50dp"
                android:text="@string/chatify"
                android:textSize="20sp" />
        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>